PROD4POD-1203: fix text overlap on left margin

--- a/features/polyExplorer/src/components/dataSharingGauge/dataSharingGauge.css
+++ b/features/polyExplorer/src/components/dataSharingGauge/dataSharingGauge.css
@@ -90,9 +90,9 @@
 }
 
 .data-sharing-gauge-average-label {
-    position: relative;
+    position: absolute;
     top: 12px;
-    right: calc(-40px - 1px);
+    right: calc(-65px - 1px);
     width: 100px;
     opacity: 0.7;
     text-align: center;
